docs: update docs with new values

--- a/aks/README.adoc
+++ b/aks/README.adoc
@@ -11,15 +11,15 @@ This module can be declared by adding the following block on your Terraform conf
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//aks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = var.cluster_name
+  argocd_namespace = module.cluster.argocd_namespace
+  base_domain      = module.cluster.base_domain
+  cluster_issuer   = var.cluster_issuer
 
   metrics_storage = {
-    container_name       = azurerm_storage_container.thanos.name
-    storage_account_name = azurerm_storage_account.thanos.name
-    storage_account_key  = azurerm_storage_account.thanos.primary_access_key
+    container           = azurerm_storage_container.thanos.name
+    storage_account     = azurerm_storage_account.thanos.name
+    storage_account_key = azurerm_storage_account.thanos.primary_access_key
   }
 
   thanos = {
@@ -39,15 +39,15 @@ Although the declaration above allows you to have a barebones Thanos deployed, i
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//aks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = var.cluster_name
+  argocd_namespace = module.cluster.argocd_namespace
+  base_domain      = module.cluster.base_domain
+  cluster_issuer   = var.cluster_issuer
 
   metrics_storage = {
-    container_name       = azurerm_storage_container.thanos.name
-    storage_account_name = azurerm_storage_account.thanos.name
-    storage_account_key  = azurerm_storage_account.thanos.primary_access_key
+    container           = azurerm_storage_container.thanos.name
+    storage_account     = azurerm_storage_account.thanos.name
+    storage_account_key = azurerm_storage_account.thanos.primary_access_key
   }
 
   thanos = {
@@ -107,15 +107,15 @@ If there is a need to configure something besides the common settings that we ha
 module "thanos" {
   source = "git::https://github.com/camptocamp/devops-stack-module-thanos.git//aks?ref=<RELEASE>"
 
-  cluster_name            = var.cluster_name
-  argocd_namespace        = module.cluster.argocd_namespace
-  base_domain             = module.cluster.base_domain
-  cluster_issuer          = var.cluster_issuer
+  cluster_name     = var.cluster_name
+  argocd_namespace = module.cluster.argocd_namespace
+  base_domain      = module.cluster.base_domain
+  cluster_issuer   = var.cluster_issuer
 
   metrics_storage = {
-    container_name       = azurerm_storage_container.thanos.name
-    storage_account_name = azurerm_storage_account.thanos.name
-    storage_account_key  = azurerm_storage_account.thanos.primary_access_key
+    container           = azurerm_storage_container.thanos.name
+    storage_account     = azurerm_storage_account.thanos.name
+    storage_account_key = azurerm_storage_account.thanos.primary_access_key
   }
 
   thanos = {
