--- a/kind/README.adoc
+++ b/kind/README.adoc
@@ -189,10 +189,11 @@ Type:
 [source,hcl]
 ----
 object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
+    bucket_name = string
+    endpoint    = string
+    access_key  = string
+    secret_key  = string
+    insecure    = optional(bool, true)
   })
 ----
 
@@ -226,7 +227,7 @@ Description: Override of target revision of the application chart.
 
 Type: `string`
 
-Default: `"v1.0.0"`
+Default: `"v1.0.1"`
 
 ==== [[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
 
@@ -338,10 +339,11 @@ Description: ID to pass other modules in order to refer to this module as a depe
 [source]
 ----
 object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
+    bucket_name = string
+    endpoint    = string
+    access_key  = string
+    secret_key  = string
+    insecure    = optional(bool, true)
   })
 ----
 
@@ -369,7 +371,7 @@ object({
 |[[input_target_revision]] <<input_target_revision,target_revision>>
 |Override of target revision of the application chart.
 |`string`
-|`"v1.0.0"`
+|`"v1.0.1"`
 |no
 
 |[[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
