--- a/sks/README.adoc
+++ b/sks/README.adoc
@@ -79,18 +79,24 @@ Version:
 
 The following input variables are required:
 
+==== [[input_cluster_id]] <<input_cluster_id,cluster_id>>
+
+Description: ID of the SKS cluster.
+
+Type: `string`
+
 ==== [[input_metrics_storage]] <<input_metrics_storage,metrics_storage>>
 
-Description: MinIO S3 bucket configuration values for the bucket where the archived metrics will be stored.
+Description: Exoscale SOS bucket configuration values for the bucket where the archived metrics will be stored.
 
 Type:
 [source,hcl]
 ----
 object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
+    bucket_name = string
+    region      = string
+    access_key  = string
+    secret_key  = string
   })
 ----
 
@@ -124,7 +130,7 @@ Description: Override of target revision of the application chart.
 
 Type: `string`
 
-Default: `"v1.0.0"`
+Default: `"v1.0.1"`
 
 ==== [[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
 
@@ -229,17 +235,23 @@ Description: ID to pass other modules in order to refer to this module as a depe
 [cols="a,a,a,a,a",options="header,autowidth"]
 |===
 |Name |Description |Type |Default |Required
+|[[input_cluster_id]] <<input_cluster_id,cluster_id>>
+|ID of the SKS cluster.
+|`string`
+|n/a
+|yes
+
 |[[input_metrics_storage]] <<input_metrics_storage,metrics_storage>>
-|MinIO S3 bucket configuration values for the bucket where the archived metrics will be stored.
+|Exoscale SOS bucket configuration values for the bucket where the archived metrics will be stored.
 |
 
 [source]
 ----
 object({
-    bucket_name       = string
-    endpoint          = string
-    access_key        = string
-    secret_access_key = string
+    bucket_name = string
+    region      = string
+    access_key  = string
+    secret_key  = string
   })
 ----
 
@@ -267,7 +279,7 @@ object({
 |[[input_target_revision]] <<input_target_revision,target_revision>>
 |Override of target revision of the application chart.
 |`string`
-|`"v1.0.0"`
+|`"v1.0.1"`
 |no
 
 |[[input_cluster_issuer]] <<input_cluster_issuer,cluster_issuer>>
