--- a/sks/README.adoc
+++ b/sks/README.adoc
@@ -8,8 +8,40 @@ This module can be declared by adding the following block on your Terraform conf
 
 [source,terraform]
 ----
-TODO
+module "thanos" {
+  source = "git::https://github.com/camptocamp/devops-stack-module-thanos//sks?ref=<RELEASE>"
+
+  cluster_name     = module.sks.cluster_name
+  base_domain      = module.sks.base_domain
+  cluster_issuer   = local.cluster_issuer
+  cluster_id       = module.sks.cluster_id
+  argocd_namespace = module.argocd_bootstrap.argocd_namespace
+
+  metrics_storage = {
+    bucket_name = resource.aws_s3_bucket.this["thanos"].id
+    region      = resource.aws_s3_bucket.this["thanos"].region
+    access_key  = resource.exoscale_iam_access_key.s3_iam_key["thanos"].key
+    secret_key  = resource.exoscale_iam_access_key.s3_iam_key["thanos"].secret
+  }
+
+  thanos = {
+    oidc = module.oidc.oidc
+  }
+
+  dependency_ids = {
+    argocd       = module.argocd_bootstrap.id
+    traefik      = module.traefik.id
+    cert-manager = module.cert-manager.id
+    keycloak     = module.keycloak.id
+    oidc         = module.oidc.id
+    longhorn     = module.longhorn.id
+  }
+}
 ----
+
+IMPORTANT: You are in charge of creating the S3 bucket to store the PV backups. We've decided to keep the creation of this bucket outside of this module, mainly because the persistence of the data should not be related to the instantiation of the module itself.
+
+TIP: Check the SKS deployment example to see how to create the S3 bucket and to better understand the values passed on the example above.
 
 === OIDC
 
@@ -44,13 +76,21 @@ Since the resource requirements are not the same on every deployment and because
 
 === Dependencies
 
-==== `module.oidc`
+==== `module.argocd_bootstrap.id`
 
-This module needs an OIDC provider to function and consequently it must be one deployed after the module `oidc`.
+Obviously, the module depends on an already running Argo CD in the cluster in order for the application to be created.
 
-==== `module.minio`
+==== `module.traefik.id` and `module.cert-manager.id`
 
-This module needs to have the configuration for the S3 bucket and consequently it must be one deployed after the module `minio`.
+This module has multiple ingresses and consequently it must be deployed after the module `traefik` and `cert-manager`.
+
+==== `module.keycloak.id` and `module.oidc.id`
+
+When using Keycloak as an OIDC provider for the Longhorn Dashboard, you need to add Keycloak and the OIDC module as dependencies.
+
+==== `module.longhorn.id`
+
+This module requires a Persistent Volume so it needs to be deployed after the module Longhorn.
 
 // BEGIN_TF_DOCS
 === Requirements
